--- a/css/faq.css
+++ b/css/faq.css
@@ -44,7 +44,9 @@
 .panel p, .panel ul {
   margin: 0;
   padding: 10px 18px;
-  text-align: left;
+  text-align: justify;
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
 .panel a {
@@ -56,7 +58,7 @@
 .panel li {
   list-style: none; /* Remove bullet points from <li> elements */
   padding-left: 0; /* Remove default padding */
-  border-bottom: 1px solid var(--secondary-color);
+  border-bottom: 0.5px solid var(--secondary-color);
   padding: 20px;
 }
 
@@ -101,7 +103,7 @@
   content: '−'; /* Use the actual minus symbol (−) instead of the hyphen (-) */
   transform: rotate(90deg); /* Keep the "-" symbol horizontal */
   display: inline-block; /* Ensure the symbol stays inline */
-  color: #444; /* Default color */
+  color: var(--secondary-color); /* Default color */
   transition: color 0.3s; /* Add transition for color change */
 }
 
