--- a/css/faq.css
+++ b/css/faq.css
@@ -45,6 +45,7 @@
   margin: 0;
   padding: 10px 18px;
   text-align: justify;
+  word-spacing: -1px; /* Adjust as needed */
   margin-left: 10px;
   margin-right: 10px;
 }
