--- a/css/footer.css
+++ b/css/footer.css
@@ -63,6 +63,11 @@ footer::before {
     color: var(--tertiary-color); /* hover font color */
 }
 
+.info a i {
+    font-size: 25px;
+    padding: 15px 5px;
+}
+
 .info p {
     text-decoration: none;
     font-size: 14px;
