--- a/css/main.css
+++ b/css/main.css
@@ -86,11 +86,12 @@
 }
 
 .benefit img {
-    width: 200px;
-    height: 200px;
+    width: 150px;
+    height: 150px;
     object-fit: cover;
     border-radius: 50%;
     margin-bottom: 10px;
+    filter: invert(1);
 }
 
 .benefit h3 {
