--- a/css/footer.css
+++ b/css/footer.css
@@ -54,7 +54,7 @@ footer::before {
 
 .info a {
     text-decoration: none;
-    font-size: 14px;
+    font-size: 12px;
     color: var(--secondary-color); /* font color */
     transition: 0.3s;
 }
@@ -109,4 +109,11 @@ footer::before {
 #subscribe-btn:hover {
     background-color: var(--secondary-color); /* Hover background color */
     color: var(--tertiary-color); /* Hover text color */
+}
+
+@media screen and (max-width: 768px) {
+    .infos {
+        flex-direction: column; /* Stack items vertically */
+        align-items: stretch; /* Stretch items to fill container width */
+    }
 }
