--- a/css/main.css
+++ b/css/main.css
@@ -67,8 +67,12 @@
 }
 
 .section-content p {
-  font-size: 18px;
+  font-size: 16px;
+  padding-left: 10px;
+  padding-right: 10px;
+  line-height: 1.5; /* Adjust this value to control the spacing between lines */
 }
+
 
 .benefits {
     display: flex;
@@ -86,10 +90,10 @@
 }
 
 .benefit img {
-    width: 150px;
-    height: 150px;
+    width: 100px;
+    height: 100px;
     object-fit: cover;
-    border-radius: 50%;
+    border-radius: 0%;
     margin-bottom: 10px;
     filter: invert(1);
 }
@@ -100,7 +104,7 @@
 }
 
 .benefit p {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .image-container {
