--- a/css/nav.css
+++ b/css/nav.css
@@ -21,7 +21,13 @@ header img {
     font-size: 30px;
     cursor: pointer;
     color: var(--secondary-color); /* hamburger color */
+    transition: 0.5s;
 }
+
+.menuIcon:hover{
+  color: var(--essence-color); /* hamburger color */
+}
+
 .sidenav {
   height: 100%;
   width: 0;
@@ -39,13 +45,13 @@ header img {
   padding: 8px 8px 8px 32px;
   text-decoration: none;
   font-size: 25px;
-  color: var(--essence-color); /* font color */
+  color: var(--secondary-color); /* font color */
   display: block;
   transition: 0.3s;
 }
 
 .sidenav a:hover {
-  color: var(--secondary-color); /* hover font color */
+  color: var(--essence-color); /* hover font color */
 }
 
 .sidenav .closebtn {
