--- a/css/totop.css
+++ b/css/totop.css
@@ -4,7 +4,7 @@ button {
   background-color: #666;
   color: #fff;
   border: none;
-  border-radius: 20px; /* Half of the height for rounded corners */
+  /* border-radius: 20px; Half of the height for rounded corners */
   font-size: 16px;
   font-weight: bold;
   cursor: pointer;
