--- a/css/content.css
+++ b/css/content.css
@@ -10,6 +10,9 @@
   display: flex;
   flex-direction: column;
   min-height: 100vh;
+  text-align: justify;
+  word-spacing: -1px; /* Adjust as needed */
+  hyphens: auto;
 }
 
 .default-content h3 {
@@ -17,6 +20,13 @@
 }
 .default-content p {
 	  text-align: justify;
+    word-spacing: -1px; /* Adjust as needed */
+    hyphens: auto;
+}
+
+.default-content li {
+    list-style: none;
+    text-align: justify;
     word-spacing: -1px; /* Adjust as needed */
     hyphens: auto;
 }
